fixed margin issue on smaller screens

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,3 +7,6 @@
     width: 100%;
     z-index: 999;
 }
+#container {
+    margin-left: 10px;
+}
